--- a/src/views/pages/cases-v2.j2
+++ b/src/views/pages/cases-v2.j2
@@ -19,7 +19,7 @@
     </div>
 
     {% set CASES_NUM = 5 %}
-    <section class="cases">
+    <section class="cases" data-cases-no-swiper>
       <div class="container">
         <div class="cases__content">
           <h1 class="cases__title title">Реализованные проекты</h1>
@@ -28,7 +28,7 @@
               <li class="cases__card case--no-pads">
                 <div class="cases__card-main">
                   <div class="cases__card-header">
-                    <h2 class="cases__card-title">Проектирование и монтаж&nbsp;СКС, ЭОМ Офиса компании «ОТКРЫТИЕ БРОКЕР»</h2>
+                    <h2 class="cases__card-title"><a href="./case-page.html" class="cases__card-title-link">Проектирование и монтаж&nbsp;СКС, ЭОМ Офиса компании «ОТКРЫТИЕ БРОКЕР»</a></h2>
                     <img class="case__logo" src="@img/otkritie-logo.svg" alt="Логотип компании Открытие брокер" width="151" height="46">
                   </div>
                   <ul class="cases__card-metrics">
