--- a/src/views/pages/cases.j2
+++ b/src/views/pages/cases.j2
@@ -18,6 +18,11 @@
       </div>
     </div>
 
+    <div class="container">
+      <a class="link" href="./cases-v2.html">Кейсы v2</a>
+    </div>
+
+
     {% include "./blocks/completed-projects.j2" %}
     <section class="reviews">
       <div class="container">
