--- a/src/views/pages/case-page.j2
+++ b/src/views/pages/case-page.j2
@@ -20,6 +20,8 @@
       </div>
     </div>
     {% include "./blocks/case.j2" %}
+    {% set sectionCardSwiperCnt = 2 %}
+    {% include "./blocks/cases-swiper.j2" %}
     {# {% include "./blocks/other-projects.j2" %} #}
     {# {% include "./blocks/subscribe-section.j2" %} #}
   </main>
@@ -32,9 +34,9 @@
 {% block js %}
   <script src="./js/swiper-bundle.min.js"></script>
   <script src="./js/swipers.min.js"></script>
-  <script src="./js/macy.min.js"></script>
-  <script src="./js/other-projects.min.js"></script>
-  <script src="./js/subscribe-form.min.js"></script>
+  {# <script src="./js/other-projects.min.js"></script>
+  <script src="./js/subscribe-form.min.js"></script> #}
   <script src="./js/modal-image.min.js"></script>
+  <script src="./js/cases-v2.min.js"></script>
   <script src="./js/main.min.js"></script>
 {% endblock %}
