--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -28,6 +28,8 @@ $blue-color: #0eadff;
 $testcolor: #fffeee;
 $par-color: #2c2c2c;
 $error-field-bg: #ffe7e7;
+$secondary-menu-color: #fafafa;
+$menu-link-color-desktop: #535353;
 
 // Font
 $jost-font: "Jost", "Arial", sans-serif;
