--- a/src/views/pages/index.j2
+++ b/src/views/pages/index.j2
@@ -4,17 +4,17 @@
 
 {% block content %}
   <main class="page-main">
-    <div class="index-header section">
+    {# <div class="index-header section">
       <div class="container">
         <div class="index-header__content">
           <h1 class="index-header__title">Поставляем <span>оборудование</span>, внедряем <span>IT&#8209;решения</span></h1>
           <button class="button index-header__button rcv-cons-button" type="button">Получить консультацию</button>
         </div>
       </div>
-    </div>
+    </div> #}
 
     <h1 class="visually-hidden">Главная ExaSystems</h1>
-    {% include "./blocks/features-under-key.j2" %}
+    {# {% include "./blocks/features-under-key.j2" %}
     {% include "./blocks/services.j2" %}
     {% include "./blocks/equipment.j2" %}
     {% include "./blocks/our-advantages.j2" %}
@@ -115,7 +115,7 @@
     </section>
     {% include "./blocks/sharing-exp.j2" %}
     {% include "./blocks/consultation.j2" %}
-    {% include "./blocks/work-with-us.j2" %}
+    {% include "./blocks/work-with-us.j2" %} #}
   </main>
 
 {% endblock content %}
@@ -125,11 +125,11 @@
 {% endblock %}
 
 {% block js %}
-  <script src="./js/consult-with-eng.min.js"></script>
+  {# <script src="./js/consult-with-eng.min.js"></script>
   <script src="./js/sharing-exp.min.js"></script>
   <script src="./js/engineer-cons.min.js"></script>
   <script src="./js/macy.min.js"></script>
-  <script src="./js/cases.min.js"></script>
-  <script src="./js/modal-image.min.js"></script>
-  <script src="./js/main.min.js"></script>
+  <script src="./js/cases.min.js"></script> #}
+  <script src="./js/modal-image.min.js" defer></script>
+  <script src="./js/main.min.js" defer></script>
 {% endblock %}
