--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -30,6 +30,7 @@ $par-color: #2c2c2c;
 $error-field-bg: #ffe7e7;
 $secondary-menu-color: #fafafa;
 $menu-link-color-desktop: #535353;
+$header-contacts-icon-bg: #4d45b1;
 
 // Font
 $jost-font: "Jost", "Arial", sans-serif;
