--- a/src/scss/blocks/page-header.scss
+++ b/src/scss/blocks/page-header.scss
@@ -16,9 +16,6 @@
   }
 }
 
-.page-header__row {
-  // display: flex;
-}
 
 .page-header__logo {
   display: flex;
@@ -26,10 +23,6 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-
-  // @media (min-width: $desktop-width) {
-  //   width: 193px;
-  // }
 
   & img {
     display: block;
@@ -46,8 +39,13 @@
 
 .page-header__contacts {
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
+  gap: 5px;
+
+  @media (width >= $desktop-width) {
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 0;
+  }
 }
 
 .page-header__buttons {
@@ -100,15 +98,19 @@
   }
 }
 
+.page-header__contact-icon-wrapper {
+  @media (width < $desktop-width) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 44px;
+    height: 44px;
+    background-color: $header-contacts-icon-bg;
+    border-radius: 3px;
+  }
+}
+
 .page-header__phone-icon-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-
-  background-color: #ffffff;
-
   transition: background-color 0.3s ease;
 
   @media (min-width: $desktop-width) {
@@ -117,15 +119,8 @@
 }
 
 .page-header__phone-icon {
-  transition: fill 0.3s ease;
-
-  fill: #ffffff;
-
-  @media (max-width: $max-tablet-width) {
-    width: 27px;
-    height: 32px;
-
-    fill: $aqua-color;
+  @media (width >= $desktop-width) {
+    display: none;
   }
 }
 
@@ -137,10 +132,6 @@
 
   gap: 10px;
 
-  @media (max-width: $max-tablet-width) {
-    display: none;
-  }
-
   & span {
     font-size: 13px;
     line-height: 16px;
@@ -149,9 +140,17 @@
     transition: color 0.3s ease;
 
     text-decoration-line: underline;
+
+    @media (width < $desktop-width) {
+      display: none;
+    }
   }
 
   & .page-header__mail-icon {
+
+    @media (width < $desktop-width) {
+      display: none;
+    }
     transition: fill 0.3s ease;
 
     fill: $menu-link-color-desktop;
@@ -164,6 +163,25 @@
 
     & .page-header__mail-icon {
       fill: $button-color;
+    }
+  }
+}
+
+.page-header__mail-icon-mobile-only {
+  @media (width >= $desktop-width) {
+    display: none;
+  }
+}
+
+.menu-opened {
+  @media (width < $desktop-width) {
+    & .page-header {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+    }
+    & .page-header__logo {
+      display: none;
     }
   }
 }
