--- a/src/views/pages/case-page.j2
+++ b/src/views/pages/case-page.j2
@@ -32,11 +32,11 @@
 {% endblock %}
 
 {% block js %}
-  <script src="./js/swiper-bundle.min.js"></script>
-  <script src="./js/swipers.min.js"></script>
+  <script src="./js/swiper-bundle.min.js" defer></script>
+  <script src="./js/swipers.min.js" defer></script>
   {# <script src="./js/other-projects.min.js"></script>
   <script src="./js/subscribe-form.min.js"></script> #}
-  <script src="./js/modal-image.min.js"></script>
-  <script src="./js/cases-v2.min.js"></script>
-  <script src="./js/main.min.js"></script>
+  <script src="./js/modal-image.min.js" defer></script>
+  <script src="./js/cases-v2.min.js" defer></script>
+  <script src="./js/main.min.js" defer></script>
 {% endblock %}
