--- a/src/scss/blocks/burger.scss
+++ b/src/scss/blocks/burger.scss
@@ -9,6 +9,7 @@
 
   background-color: $button-color;
   border: none;
+  border-radius: 3px;
   cursor: pointer;
 
   transition: background-color 0.5s ease;
