--- a/src/scss/blocks/page-header.scss
+++ b/src/scss/blocks/page-header.scss
@@ -1,6 +1,3 @@
-.page-header {
-
-}
 
 .page-header--sticky {
   position: fixed;
@@ -10,10 +7,6 @@
   width: 100%;
 
   animation: showing-animation 0.5s;
-
-  @media (min-width: $desktop-width) {
-    padding: 20px 0;
-  }
 }
 
 
@@ -29,21 +22,15 @@
   }
 }
 
-.page-header__logo-image2 {
-  @media (min-width: $desktop-width) {
-    align-self: flex-end;
-    width: 102px;
-    height: 7px;
-  }
-}
-
 .page-header__contacts {
   display: flex;
+
   gap: 5px;
 
   @media (width >= $desktop-width) {
     flex-direction: column;
     align-items: flex-end;
+
     gap: 0;
   }
 }
@@ -105,6 +92,7 @@
     align-items: center;
     width: 44px;
     height: 44px;
+
     background-color: $header-contacts-icon-bg;
     border-radius: 3px;
   }
@@ -147,13 +135,12 @@
   }
 
   & .page-header__mail-icon {
-
-    @media (width < $desktop-width) {
-      display: none;
-    }
     transition: fill 0.3s ease;
 
     fill: $menu-link-color-desktop;
+    @media (width < $desktop-width) {
+      display: none;
+    }
   }
 
   &:hover {
@@ -180,7 +167,9 @@
       flex-direction: column;
       height: 100%;
     }
-    & .page-header__logo {
+    & .page-header__logo,
+    & .page-header__mail-button,
+    & .page-header__phone-button {
       display: none;
     }
   }
