--- a/src/views/pages/cases-v2.j2
+++ b/src/views/pages/cases-v2.j2
@@ -159,8 +159,8 @@
 {% endblock %}
 
 {% block js %}
-  <script src="./js/modal-image.min.js"></script>
-  <script src="./js/cases-v2.min.js"></script>
+  <script src="./js/modal-image.min.js" defer></script>
+  <script src="./js/cases-v2.min.js" defer></script>
   {# <script src="./js/subscribe-form.min.js"></script> #}
-  <script src="./js/main.min.js"></script>
+  <script src="./js/main.min.js" defer></script>
 {% endblock %}
