удалил страую страницу кейсов и оставил только новую

--- a/src/views/pages/case-page.j2
+++ b/src/views/pages/case-page.j2
@@ -37,6 +37,6 @@
   {# <script src="./js/other-projects.min.js"></script>
   <script src="./js/subscribe-form.min.js"></script> #}
   <script src="./js/modal-image.min.js" defer></script>
-  <script src="./js/cases-v2.min.js" defer></script>
+  <script src="./js/cases.min.js" defer></script>
   <script src="./js/main.min.js" defer></script>
 {% endblock %}
