--- a/src/scss/blocks/menu.scss
+++ b/src/scss/blocks/menu.scss
@@ -2,12 +2,12 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  overflow-x: hidden;
 
   color: #ffffff;
 
   @media (width < $desktop-width) {
     padding: 10px 0;
+    overflow-x: hidden;
   }
 
   @media (min-width: $desktop-width) {
@@ -28,8 +28,9 @@
 
 .menu__main {
   @media (min-width: $desktop-width) {
-    padding: 10px 0;
+    padding: $menu-main-vertical-paddings 0;
     background-color: #ffffff;
+    position: relative;
   }
 }
 
@@ -44,6 +45,7 @@
 }
 
 .menu__main-container {
+  // position: relative;
   display: flex;
   align-items: center;
 }
@@ -72,6 +74,7 @@
   }
   @media (width >= $desktop-width) {
     margin-left: 3em;
+    align-self: stretch;
   }
 }
 
@@ -107,6 +110,10 @@
       background-color: rgb(245 245 245 / 51%);
     }
   }
+  @media (width >= $desktop-width) {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .menu__item--desktop-hidden {
@@ -122,7 +129,6 @@
     }
   }
 }
-
 
 .menu__link {
   display: flex;
@@ -211,6 +217,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  overflow-y: scroll;
 
   display: none;
 }
@@ -355,6 +362,130 @@
       position: absolute;
       top: 10px;
       right: $paddings-mobile;
+    }
+  }
+}
+
+.menu__dropdown {
+  width: 100%;
+  // height: 300px;
+  display: none;
+  padding: 10px 0;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
+  color: $menu-dropdown-title-color;
+
+  @media (width < $desktop-width) {
+    display: none;
+  }
+}
+.menu__dropdown-content {
+  display: flex;
+  flex-direction: column;
+  padding: 40px 0;
+}
+
+.menu__dropdown-title,
+.menu__dropdown-list-title {
+  margin: 0;
+  padding: 0;
+  font-family: $jost-font;
+  font-size: 25px;
+  font-weight: 500;
+  line-height: 130%;
+  color: inherit;
+}
+
+.menu__dropdown-link {
+  text-decoration: none;
+}
+
+.menu__dropdown-main {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.menu__dropdown-main--theme1 {
+  & > * {
+    margin-left: 160px;
+  }
+
+  & :first-child {
+    width: 100%;
+  }
+
+  & :first-child,
+  & :nth-child(2) {
+    margin-left: 0;
+  }
+}
+
+.menu__dropdown-list-wrapper {
+  display: flex;
+  flex-direction: column;
+  margin-top: 40px;
+}
+
+.menu__dropdown-list-title {
+  font-size: 20px;
+}
+.menu__dropdown-list {
+  display: flex;
+  flex-direction: column;
+  margin-top: 15px;
+  gap: 5px;
+}
+
+.menu__dropdown-list-wrapper--vendors .menu__dropdown-list {
+  display: grid;
+  gap: 10px;
+  grid-template-columns: repeat(auto-fill, 130px);
+}
+
+.menu__dropdown-list-item {
+}
+.menu__dropdown-list-link {
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 130%;
+  color: inherit;
+}
+
+.menu__vendor-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 4px;
+  height: 53px;
+  border: 1px solid #d0d0d0;
+  border-radius: 3px;
+
+  transition: border-color 0.3s ease;
+
+  &:hover {
+    border-color: $button-color;
+  }
+}
+
+.menu__vendor-link-image {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.menu__item--has-dropdown {
+  @media (width >= $desktop-width) {
+    &:hover,
+    &:focus-within {
+      & .menu__dropdown {
+        position: absolute;
+        top: calc(100% - $menu-main-vertical-paddings);
+        left: 0;
+        z-index: 100;
+
+        display: block;
+      }
     }
   }
 }
