доделал десктопное меню

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,6 +33,7 @@
 @import "./blocks/side-panel";
 @import "./blocks/list";
 @import "./blocks/spinner";
+@import "./blocks/card";
 
 //
 @import "./blocks/page";
