--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -31,6 +31,7 @@ $secondary-menu-color: #fafafa;
 $menu-link-color-desktop: #535353;
 $header-contacts-icon-bg: #4d45b1;
 $menu-dropdown-title-color: #2a2a2a;
+$card-font-color: #2a2a2a;
 
 // Font
 $jost-font: "Jost", "Arial", sans-serif;
