--- a/src/scss/blocks/menu.scss
+++ b/src/scss/blocks/menu.scss
@@ -368,6 +368,7 @@
 
 .menu__dropdown {
   width: 100%;
+  // min-height: 100vh;
   // height: 300px;
   display: none;
   padding: 10px 0;
@@ -383,7 +384,8 @@
 .menu__dropdown-content {
   display: flex;
   flex-direction: column;
-  padding: 40px 0;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 .menu__dropdown-title,
@@ -402,22 +404,27 @@
 }
 
 .menu__dropdown-main {
+}
+
+.menu__dropdown-main-lists-container {
   display: flex;
   flex-wrap: wrap;
 }
 
 .menu__dropdown-main--theme1 {
-  & > * {
-    margin-left: 160px;
-  }
+  & .menu__dropdown-main-lists-container {
+    & > * {
+      margin-right: 160px;
+    }
 
-  & :first-child {
-    width: 100%;
-  }
+    & > :first-child {
+      width: 100%;
+      margin-right: 0;
+    }
 
-  & :first-child,
-  & :nth-child(2) {
-    margin-left: 0;
+    & > :nth-child(3n + 1) {
+      margin-right: 0;
+    }
   }
 }
 
@@ -425,6 +432,20 @@
   display: flex;
   flex-direction: column;
   margin-top: 40px;
+}
+
+.menu__dropdown-main--theme2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 80px;
+
+  & .menu__dropdown-main-lists-container {
+    flex-direction: column;
+  }
+
+  & .menu__dropdown-list-wrapper {
+    max-width: 405px;
+  }
 }
 
 .menu__dropdown-list-title {
@@ -450,6 +471,27 @@
   font-size: 16px;
   line-height: 130%;
   color: inherit;
+}
+
+.menu__dropdown-list-link--with-icon {
+  position: relative;
+  padding-right: 45px;
+
+  & img {
+    max-width: 40px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 0;
+    transition: opacity 0.3s ease;
+  }
+
+  &:hover,
+  &:active {
+    & img {
+      opacity: 0.6;
+    }
+  }
 }
 
 .menu__vendor-link {
@@ -488,4 +530,11 @@
       }
     }
   }
+}
+
+.menu__cards {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 40px;
+  grid-auto-rows: max-content;
 }
